Clean up Sonar issues in parental lock flow
- extract repeated parental-lock log fragments into local constants
- split category access logging into helper methods to reduce cognitive complexity
- replace duplicated configuration key literals with constants
- simplify the account edit callback lambda in BaseMainApplicationUI
- modernize test list assertions to use Stream.toList()
- refactor assertThrows lambdas to a single runtime-throwing invocation
- suppress the intentional FilterLockService singleton warning